Fixed model, color, and trim properly. Split up JS files according to function.

--- a/autoscraper_rust/templates/index.html
+++ b/autoscraper_rust/templates/index.html
@@ -1521,6 +1521,7 @@
 		<!-- Firebase -->
 		<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
 		<script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
-		<script src="static/index.js"></script>
+		<!-- Link to the new module entry point -->
+		<script type="module" src="/static/js/main.js"></script>
 	</body>
 </html>
