--- a/templates/index.html
+++ b/templates/index.html
@@ -212,7 +212,7 @@
 								<li>
 									<a
 										class="dropdown-item"
-										href="{{ url_for('logout') }}"
+										href="{{ url_for('auth.logout') }}" <!-- Use blueprint name -->
 										id="logoutLink"
 										><i class="bi bi-box-arrow-right"></i>
 										Logout</a
