--- a/templates/login.html
+++ b/templates/login.html
@@ -167,7 +167,7 @@
                 </div>
                 
                 <!-- Hidden form for sending token to backend -->
-                <form id="tokenForm" method="POST" action="{{ url_for('login') }}" style="display: none;">
+                <form id="tokenForm" method="POST" action="{{ url_for('auth.login') }}" style="display: none;">
                     <input type="hidden" name="idToken" id="idToken">
                 </form>
                 
@@ -197,7 +197,7 @@
             .then(data => {
                     if (data.authenticated) {
                         console.log("Already authenticated on server, redirecting to app_interface");
-                        window.location.href = "{{ url_for('app_interface') }}";
+                        window.location.href = "{{ url_for('views.app_interface') }}"; // Use blueprint name
                         return;
                     } else {
                     console.log("Not authenticated, showing login form");
