Added loading stuff

--- a/templates/index.html
+++ b/templates/index.html
@@ -879,6 +879,16 @@
 								<i class="bi bi-search"></i> Fetch Data
 							</button>
 						</div>
+
+						<!-- Progress Bar Container -->
+						<div id="fetchProgressContainer" style="display: none;" class="mt-3 mb-3">
+							<p id="fetchProgressStatus" class="mb-1">Starting fetch...</p>
+							<div class="progress" style="height: 20px;">
+								<div id="fetchProgressBar" class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
+							</div>
+						</div>
+						<!-- End Progress Bar Container -->
+
 					</form>
 				</div>
 			</div>
