adding testing of features

--- a/templates/index.html
+++ b/templates/index.html
@@ -864,6 +864,13 @@
 							class="d-grid gap-2 d-md-flex justify-content-md-end mt-3"
 						>
 							<button
+								class="btn btn-info me-md-2"
+								type="button"
+								id="clearFiltersBtn"
+							>
+								<i class="bi bi-x-circle"></i> Clear Filters
+							</button>
+							<button
 								class="btn btn-secondary me-md-2"
 								type="button"
 								id="createPayloadBtn"
